# plantguard360

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: download_data.sh
