[project]
name = "plantguard360"
version = "0.1.0"
description = ""
authors = [
    {name = "Takumi Kotani",email = "takumi59267@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
